--- a/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -32,6 +32,7 @@
     <link href="~/AdminTheme/assets/sweet-alert/sweet-alert.min.css" rel="stylesheet">
 
     <!-- Custom Files -->
+    <link href="~/AdminTheme/assets/css/persian-datepicker.min.css" rel="stylesheet" type="text/css" />
     <link href="~/AdminTheme/assets/css/helper.css" rel="stylesheet" type="text/css" />
     <link href="~/AdminTheme/assets/css/style.css" rel="stylesheet" type="text/css" />
 
@@ -181,8 +182,19 @@
                                 <li><a asp-page="/shop/ProductPictures/Index">عکس محصولات</a></li>
                             </ul>
                         </li>
+                        
+                        <li class="has_sub">
+                            <a class="waves-effect"><i class="md md-mail"></i><span> سیستم تخفیفات </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a asp-page="/Discounts/CustomerDiscounts/Index">تخفیف مشتری</a></li>
+                                <li><a asp-page="/Discounts/ColleagueDiscounts/Index">تخفیف همکاری</a></li>
+                               @*  <li><a asp-page="/shop/ProductCategories/Index">گروه محصولات</a></li>
+                                <li><a asp-page="/shop/Products/Index">محصولات</a></li>
+                                <li><a asp-page="/shop/ProductPictures/Index">عکس محصولات</a></li> *@
+                            </ul>
+                        </li>
 
-   @*                      <li>
+                        @*                      <li>
                             <a href="calendar.html" class="waves-effect"><i class="md md-event"></i><span> Calendar </span></a>
                         </li>
 
@@ -395,20 +407,20 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
     <script src="~/AdminTheme/assets/js/site.js"></script>
-    
+
+    <script src="~/AdminTheme/assets/js/persian-date.min.js"></script>
+    <script src="~/AdminTheme/assets/js/persian-datepicker.min.js"></script>
+
     @RenderSection("Scripts", false)
     
-    <!-- <script type="text/javascript"> -->
-    <!-- /* ============================================== -->
-    <!-- Counter Up -->
-    <!-- =============================================== */ -->
-    <!-- jQuery(document).ready(function($) { -->
-    <!-- $('.counter').counterUp({ -->
-    <!-- delay: 100, -->
-    <!-- time: 1200 -->
-    <!-- }); -->
-    <!-- }); -->
-    <!-- </script> -->
+    <script>
+        $('.persianDateInput').persianDatepicker({
+            // observer: true,
+            format: 'YYYY/MM/DD',
+            // altField: '.observer-example-alt'
+            autoClose:true
+        });
+    </script>
 
 </body>
 </html>
