--- a/ServiceHost/Areas/Administration/Pages/Inventory/Index.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Inventory/Index.cshtml
@@ -84,6 +84,11 @@
                                                href="#showmodal=@Url.Page("./Index", "Reduce", new { id = item.Id})">
                                                 <i class="fa fa-minus"></i> کاهش
                                             </a>
+
+                                            <a class="btn btn-primary pull-right m-rl-5"
+                                               href="#showmodal=@Url.Page("./Index", "Log", new { id = item.Id})">
+                                                <i class="fa fa-recycle"></i> مشاهده گردش انبار
+                                            </a>
                                         </td>
                                     </tr>
                                 }
