showing discount Rate and price-after-discount on picture of products on UI done..

--- a/ServiceHost/Pages/Shared/Components/ProductCategoryWithProduct/Default.cshtml
+++ b/ServiceHost/Pages/Shared/Components/ProductCategoryWithProduct/Default.cshtml
@@ -70,7 +70,7 @@
                                                 <div class="single-grid-product">
                                                     <div class="single-grid-product__image">
                                                         
-                                                        @if (product.DiscountRate>0)
+                                                        @if (product.HasDiscount)
                                                         {
                                                             <div class="single-grid-product__label">
                                                                 <span class="sale">-@product.DiscountRate%</span>
@@ -113,7 +113,7 @@
                                                         </h3>
                                                         <p class="single-grid-product__price">
                                                             @* <span class="main-price">$120.00</span> *@
-                                                            @if (product.DiscountRate>0)
+                                                            @if (product.HasDiscount)
                                                             {
                                                                 <span class="discounted-price">@product.PriceAfterDiscount تومان</span>
                                                                 <span class="main-price discounted">@product.Price تومان</span>
