--- a/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Edit.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Edit.cshtml
@@ -37,7 +37,7 @@
                     <label asp-for="Picture" class="control-label">عکس</label>
                     <input type="file" class="form-control" asp-for="Picture" accept="image/*">
                     @* <input type="text" class="form-control" asp-for="Picture" > *@
-                    <span asp-validation-for="Picture" class="error"></span>
+                    @* <span asp-validation-for="Picture" class="error"></span> *@
                 </div>
             </div>
         </div>
