--- a/ServiceHost/Areas/Administration/Pages/Shop/ProductPictures/Index.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Shop/ProductPictures/Index.cshtml
@@ -74,8 +74,8 @@
                                     <tr>
                                         <td>@item.Id</td>
                                         <td>
-                                            @* <img src="~/ProductPictures/@item.Picture" style="width: 70px; height: 70px" /> *@
-                                            <img src="@item.Picture" style="width: 70px; height: 70px" />
+                                            <img src="~/ProductPictures/@item.Picture" style="width: 70px; height: 70px" />
+                                            @* <img src="@item.Picture" style="width: 70px; height: 70px" /> *@
                                         </td>
                                         <td>@item.Product</td>
                                         <td>@item.CreationDate</td>
