--- a/ServiceHost/Areas/Administration/Pages/Shop/Products/Index.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Shop/Products/Index.cshtml
@@ -75,8 +75,8 @@
                                     <tr>
                                         <td>@item.Id</td>
                                         <td>
-                                            @* <img src="~/ProductPictures/@item.Picture" style="width: 70px; height: 70px" /> *@
-                                            <img src="@item.Picture" style="width: 70px; height: 70px" />
+                                            <img src="~/ProductPictures/@item.Picture" style="width: 70px; height: 70px" />
+                                            @* <img src="@item.Picture" style="width: 70px; height: 70px" /> *@
                                         </td>
                                         <td>@item.Name</td>
                                         <td>@item.Code</td>
