--- a/ServiceHost/Areas/Administration/Pages/Shop/Slides/Edit.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Shop/Slides/Edit.cshtml
@@ -19,8 +19,8 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label asp-for="Picture" class="control-label">عکس</label>
-                    @* <input type="file" class="form-control" asp-for="Picture" accept="image/*"> *@
-                    <input type="text" class="form-control" asp-for="Picture">
+                    <input type="file" class="form-control" asp-for="Picture" accept="image/*">
+                    @* <input type="text" class="form-control" asp-for="Picture"> *@
                     @* <span asp-validation-for="Picture" class="error"></span> *@
                 </div>
             </div>
@@ -78,7 +78,7 @@
                 <div class="form-group">
                     <label asp-for="Link" class="control-label">لینک</label>
                     <input type="text" class="form-control" asp-for="Link">
-                    @* <span asp-validation-for="PictureTitle" class="error"></span> *@
+                    <span asp-validation-for="Link" class="error"></span>
                 </div>
             </div>
         </div>
