--- a/ServiceHost/Pages/ProductCategory.cshtml
+++ b/ServiceHost/Pages/ProductCategory.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id}"
 @using SM.Domain.ProductAgg
 @model ServiceHost.Pages.ProductCategoryModel
 @{
@@ -80,7 +80,7 @@
                                                             </div>
                                                         }
 
-                                                        <a href="single-product.html">
+                                                        <a asp-page="/Product" asp-route-id="@product.Slug">
                                                             <img src="@product.Picture" class="img-fluid"
                                                                  alt="@product.PictureAlt" title="@product.PictureTitle">
                                                         </a>
@@ -98,7 +98,7 @@
                                                     <div class="single-grid-product__content">
                                                         <div class="single-grid-product__category-rating">
                                                             <span class="category">
-                                                                <a href="shop-left-sidebar.html">Decor</a>
+                                                                <a asp-page="/ProductCategory" asp-route-id="@Model.ProductCategory.Slug">@Model.ProductCategory.Name</a>
                                                             </span>
                                                             <span class="rating">
                                                                 <i class="ion-android-star active"></i>
@@ -110,7 +110,7 @@
                                                         </div>
 
                                                         <h3 class="single-grid-product__title">
-                                                            <a asp-page="/ProductDetails">
+                                                            <a asp-page="/Product" asp-route-id="@product.Slug">
                                                                 @product.Name
                                                             </a>
                                                         </h3>
