--- a/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -184,6 +184,7 @@
                                 <li><a asp-page="/shop/ProductCategories/Index">گروه محصولات</a></li>
                                 <li><a asp-page="/shop/Products/Index">محصولات</a></li>
                                 <li><a asp-page="/shop/ProductPictures/Index">عکس محصولات</a></li>
+                                <li><a asp-page="/shop/Comments/Index">نظرات</a></li>
                             </ul>
                         </li>
                         
@@ -192,6 +193,7 @@
                             <ul class="list-unstyled">
                                 <li><a asp-page="/Discounts/CustomerDiscounts/Index">تخفیف مشتری</a></li>
                                 <li><a asp-page="/Discounts/ColleagueDiscounts/Index">تخفیف همکاری</a></li>
+
                                @*  <li><a asp-page="/shop/ProductCategories/Index">گروه محصولات</a></li>
                                 <li><a asp-page="/shop/Products/Index">محصولات</a></li>
                                 <li><a asp-page="/shop/ProductPictures/Index">عکس محصولات</a></li> *@
