--- a/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -194,7 +194,19 @@
                                 <li><a asp-page="/Discounts/CustomerDiscounts/Index">تخفیف مشتری</a></li>
                                 <li><a asp-page="/Discounts/ColleagueDiscounts/Index">تخفیف همکاری</a></li>
 
-                               @*  <li><a asp-page="/shop/ProductCategories/Index">گروه محصولات</a></li>
+                                @*  <li><a asp-page="/shop/ProductCategories/Index">گروه محصولات</a></li>
+                                <li><a asp-page="/shop/Products/Index">محصولات</a></li>
+                                <li><a asp-page="/shop/ProductPictures/Index">عکس محصولات</a></li> *@
+                            </ul>
+                        </li>
+                        
+                        <li class="has_sub">
+                            <a class="waves-effect"><i class="md md-mail"></i><span> سیستم بلاگینگ </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a asp-page="/Blog/ArticleCategories/Index">گروه مقالات</a></li>
+                                <li><a asp-page="">مقاله </a></li>
+
+                                @*  <li><a asp-page="/shop/ProductCategories/Index">گروه محصولات</a></li>
                                 <li><a asp-page="/shop/Products/Index">محصولات</a></li>
                                 <li><a asp-page="/shop/ProductPictures/Index">عکس محصولات</a></li> *@
                             </ul>
