--- a/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Edit.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@model DM.Application.Contracts.CustomerDiscount.EditCustomerDiscount
 @{
+    
 }
 
 <div class="modal-header">
@@ -41,14 +42,14 @@
                 <div class="form-group">
                     <label asp-for="StartDate" class="control-label">تاریخ شروع</label>
                     @* <input type="text" class="form-control persianDateInput" asp-for="StartDate"> *@
-                    <input type="text" class="form-control" asp-for="StartDate">
+                    <input type="text" class="form-control persianDateInput" asp-for="StartDate">
                     <span asp-validation-for="StartDate" class="error"></span>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="EndDate" class="control-label">تاریخ پایان</label>
-                    <input type="text" class="form-control persianDateInput" asp-for="EndDate">
+                    <input type="text" class="form-control  persianDateInput" asp-for="EndDate">
                     <span asp-validation-for="EndDate" class="error"></span>
                 </div>
             </div>
