--- a/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Edit.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Discounts/CustomerDiscounts/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DM.Application.Contracts.CustomerDiscount.EditCustomerDiscount
 @{
-    
+
 }
 
 <div class="modal-header">
@@ -12,14 +12,13 @@
       method="post"
       data-ajax="true"
       data-callback=""
-      data-action="Refresh"
-      enctype="multipart/form-data">
+      data-action="Refresh">
     <div class="modal-body">
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="ProductId" class="control-label"> انتخاب محصول</label>
-                    <select class="form-control" asp-for="ProductId" 
+                    <select class="form-control" asp-for="ProductId"
                             asp-items='new SelectList(Model.Products,"Id","Name")'>
                         <option value="0"> محصول را انتخاب کنید</option>
                     </select>
@@ -42,14 +41,14 @@
                 <div class="form-group">
                     <label asp-for="StartDate" class="control-label">تاریخ شروع</label>
                     @* <input type="text" class="form-control persianDateInput" asp-for="StartDate"> *@
-                    <input type="text" class="form-control persianDateInput" asp-for="StartDate">
+                    <input class="form-control persianDateInput" asp-for="StartDate">
                     <span asp-validation-for="StartDate" class="error"></span>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="EndDate" class="control-label">تاریخ پایان</label>
-                    <input type="text" class="form-control  persianDateInput" asp-for="EndDate">
+                    <input class="form-control  persianDateInput" asp-for="EndDate">
                     <span asp-validation-for="EndDate" class="error"></span>
                 </div>
             </div>
@@ -65,7 +64,7 @@
                 </div>
             </div>
         </div>
-        <input type="hidden" asp-for="Id" value="@Model.Id"/>
+        <input type="hidden" asp-for="Id" value="@Model.Id" />
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">بستن</button>
