Article Ui starts and goes almostly.

--- a/ServiceHost/Areas/Administration/Pages/Blog/Articles/Edit.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Blog/Articles/Edit.cshtml
@@ -22,14 +22,14 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label asp-for="Command.Title" class="control-label">عنوان</label>
-                                <input type="text" class="form-control" asp-for="Command.Title" onchange="makeSlug('Command.Title', 'Command.Slug')">
+                                <input type="text" class="form-control" id="title" asp-for="Command.Title" onchange="makeSlug('title', 'slug')">
                                 <span asp-validation-for="Command.Title" class="error"></span>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label asp-for="Command.Slug" class="control-label">اسلاگ</label>
-                                <input type="text" class="form-control" asp-for="Command.Slug">
+                                <input type="text" class="form-control" id="slug" asp-for="Command.Slug">
                                 <span asp-validation-for="Command.Slug" class="error"></span>
                             </div>
                         </div>
@@ -91,7 +91,7 @@
                         <div class="col-md-12">
                             <div class="form-group no-margin">
                                 <label asp-for="Command.Description" class="control-label">توضیحات </label>
-                                <textarea class="form-control autogrow" asp-for="Command.Description"></textarea>
+                                <textarea class="form-control" id="BodyContent" asp-for="Command.Description"></textarea>
                                 <span asp-validation-for="Command.Description" class="error"></span>
                             </div>
                         </div>
