--- a/ServiceHost/wwwroot/Theme/assets/css/style.css
+++ b/ServiceHost/wwwroot/Theme/assets/css/style.css
@@ -2684,8 +2684,9 @@ select {
 	display: -ms-flexbox;
 	display: flex;
 	flex-direction: column;
-	width: 62px;
-	height: 70px;
+	padding:5px;
+/*	width: 62px;
+	height: 70px;*/
 	text-align: center;
 	background: #fff;
 	-webkit-box-orient: vertical;
