--- a/ServiceHost/Pages/ProductCategory.cshtml
+++ b/ServiceHost/Pages/ProductCategory.cshtml
@@ -2,7 +2,9 @@
 @using SM.Domain.ProductAgg
 @model ServiceHost.Pages.ProductCategoryModel
 @{
-    ViewData["Title"] = "گروه محصولات";
+    ViewData["Title"] = Model.ProductCategory.Name;
+    ViewData["keywords"] = Model.ProductCategory.Keywords;
+    ViewData["metaDescription"] = Model.ProductCategory.MetaDescription;
 }
 
 <div class="breadcrumb-area section-space--half">
