--- a/ServiceHost/Areas/Administration/Pages/Blog/ArticleCategories/Create.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Blog/ArticleCategories/Create.cshtml
@@ -19,14 +19,14 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="Name" class="control-label">نام</label>
-                    <input type="text" class="form-control" asp-for="Name" onchange="makeSlug('Name', 'Slug')">
+                    <input type="text" class="form-control" id="Name" asp-for="Name" onchange="makeSlug('Name', 'Slug')">
                     <span asp-validation-for="Name" class="error"></span>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="Slug" class="control-label">اسلاگ</label>
-                    <input type="text" class="form-control" asp-for="Slug">
+                    <input type="text" class="form-control" id="Slug" asp-for="Slug">
                     <span asp-validation-for="Slug" class="error"></span>
                 </div>
             </div>
