--- a/ServiceHost/Pages/Shared/_Layout.cshtml
+++ b/ServiceHost/Pages/Shared/_Layout.cshtml
@@ -4,8 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>فروشگاه من</title>
-
+    @if (ViewData["Title"] !=null)
+    {
+        <title> ViewData["Title"] - فروشگاه دیجیتال </title>
+    }
+    else
+    {
+        <title>  فروشگاه دیجیتال </title>
+    }
+    
+    <meta name="keywords" content="@ViewData["Keywords"]" />
+    <meta name="description" content="@ViewData["metaDescription"]" />
+   
     <link href="~/Theme/assets/css/vendors.css" rel="stylesheet">
     <link href="~/Theme/assets/css/style.css" rel="stylesheet">
     <link href="~/Theme/assets/css/Custom.css" rel="stylesheet">
