Comments separated from Shop.

--- a/ServiceHost/Pages/Product.cshtml
+++ b/ServiceHost/Pages/Product.cshtml
@@ -362,7 +362,7 @@
                                                                     <textarea name="message" id="message"
                                                                               placeholder="نظر خود را بنویسید ..."></textarea>
                                                                 </div>
-                                                                <input type="hidden" name="productId" value="@Model.Product.Id" />
+                                                                <input type="hidden" name="ownerRecordId" value="@Model.Product.Id" />
                                                                 <input type="hidden" name="productSlug" value="@Model.Product.Slug" />
                                                                 <div class="col-12">
                                                                     <input value="ارسال" type="submit">
