--- a/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -184,10 +184,10 @@
                                 <li><a asp-page="/shop/ProductCategories/Index">گروه محصولات</a></li>
                                 <li><a asp-page="/shop/Products/Index">محصولات</a></li>
                                 <li><a asp-page="/shop/ProductPictures/Index">عکس محصولات</a></li>
-                                <li><a asp-page="/shop/Comments/Index">نظرات</a></li>
+                               
                             </ul>
                         </li>
-
+                        <li><a asp-page="/Comments/Index" class="waves-effect"><i class="md md-home"></i><span>نظرات</span></a></li>
                         <li class="has_sub">
                             <a class="waves-effect"><i class="md md-mail"></i><span> سیستم تخفیفات </span><span class="pull-right"><i class="md md-add"></i></span></a>
                             <ul class="list-unstyled">
