--- a/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -201,16 +201,41 @@
                         </li>
 
                         <li class="has_sub">
-                            <a class="waves-effect"><i class="md md-mail"></i><span> سیستم بلاگینگ </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                            <a class="waves-effect"><i class="md md-mail"></i><span> سیستم بلاگینگ </span>
+                                <span class="pull-right"><i class="md md-add"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a asp-page="/Blog/ArticleCategories/Index">گروه مقالات</a></li>
                                 <li><a asp-page="/Blog/Articles/Index">مقاله </a></li>
 
-                                @*  <li><a asp-page="/shop/ProductCategories/Index">گروه محصولات</a></li>
-                                <li><a asp-page="/shop/Products/Index">محصولات</a></li>
-                                <li><a asp-page="/shop/ProductPictures/Index">عکس محصولات</a></li> *@
                             </ul>
                         </li>
+                        
+                        <li class="has_sub">
+                            <a class="waves-effect"><i class="md md-mail"></i><span> سیستم کاربران </span>
+                                <span class="pull-right"><i class="md md-add"></i></span></a>
+                            <ul class="list-unstyled">
+
+                                <li><a asp-page="/Accounts/Account/Index">کاربران</a></li>
+                                <li><a asp-page="/Accounts/Role/Index">نقش ها </a></li>
+
+                            </ul>
+                        </li>
+                        
+                        
+                       @*  <li class="has_sub">
+                            <a class="waves-effect"><i class="md md-mail"></i><span> فروشگاه </span>
+                                <span class="pull-right"><i class="md md-add"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a asp-page="/shop/Slides/Index">اسلایدر</a></li>
+                                <li><a asp-page="/shop/ProductCategories/Index">گروه محصولات</a></li>
+                                <li><a asp-page="/shop/Products/Index">محصولات</a></li>
+                                <li><a asp-page="/shop/ProductPictures/Index">عکس محصولات</a></li>
+                               
+                            </ul>
+                        </li> *@
+                        
+                        
+
 
                         @*                      <li>
                         <a href="calendar.html" class="waves-effect"><i class="md md-event"></i><span> Calendar </span></a>
