--- a/ServiceHost/Areas/Administration/Pages/Accounts/Account/Edit.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Accounts/Account/Edit.cshtml
@@ -40,19 +40,10 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="RoleId" class="control-label">نقش</label>
-                   @*  <select class="form-control" asp-for="RoleId" asp-items='new SelectList(Model.Roles, "Id", "Name")'>
+                    <select class="form-control" asp-for="RoleId" asp-items='new SelectList(Model.Roles, "Id", "Name")'>
                         <option value="0">نقش را انتخاب کنید</option>
-                    </select> *@
-                    
-                    <select asp-for="RoleId" class="form-control">
-                        <option value="1">مدیر سیستم</option>
-                        <option value="2">کاربر سیستم</option>
-
                     </select>
-                    
-
                     <span asp-validation-for="RoleId" class="error"></span>
-
                 </div>
             </div>
 
