--- a/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
+++ b/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
@@ -49,6 +49,11 @@
                                 <li>
                                     <a href="contact.html">تماس با ما</a>
                                 </li>
+                                
+                                <li>
+                                    <a asp-page="/Account">ثبت نام/ ورود</a>
+                                </li>
+
                             </ul>
                         </nav>
                     </div>
