--- a/ServiceHost/Pages/Account.cshtml
+++ b/ServiceHost/Pages/Account.cshtml
@@ -30,7 +30,11 @@
                     <div class="page-content-wrapper">
                         <div class="row">
                             <div class="col-sm-12 col-md-12 col-xs-12 col-lg-6">
-                                <form action="#">
+                                @if (Model.Message!=null)
+                                {
+                                    <div class="alert alert-danger">@Model.Message</div>
+                                }
+                                <form method="post" asp-page-handler="Login">
                                     <div class="login-form">
                                         <h4 class="login-title">ورود</h4>
                                         <div class="row">
@@ -42,7 +46,7 @@
                                                 <label>رمز عبور</label>
                                                 <input type="password" name="password" placeholder="رمز عبور">
                                             </div>
-                                         @*    <div class="col-sm-6">
+                                            @*    <div class="col-sm-6">
 
                                                 <div class="check-box d-inline-block ml-0 ml-md-2">
                                                     <input type="checkbox" id="remember_me">
