--- a/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
+++ b/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
@@ -1,4 +1,5 @@
 ﻿@model _01_ShopQuery.MenuModel
+@inject _0_Framework.Application.IAuthHelper AuthHelper
 @{
 }
 <div class="header-area header-sticky">
@@ -50,9 +51,19 @@
                                     <a href="contact.html">تماس با ما</a>
                                 </li>
                                 
-                                <li>
-                                    <a asp-page="/Account">ثبت نام/ ورود</a>
-                                </li>
+                                @if (AuthHelper.IsAuthenticated())
+                                {
+                                    <li>
+                                        <a asp-page="/Account" asp-page-handler="Logout">خروج</a>
+                                    </li>
+                                }
+                                else
+                                {
+                                    <li>
+                                        <a asp-page="/Account">ثبت نام/ ورود</a>
+                                    </li>
+                                }
+                              
 
                             </ul>
                         </nav>
