--- a/ServiceHost/Pages/Account.cshtml
+++ b/ServiceHost/Pages/Account.cshtml
@@ -22,6 +22,14 @@
     </div>
 </div>
 
+
+@* @if (!string.IsNullOrWhiteSpace(Model.LoginMessage)) *@
+@if (Model.LoginMessage != null)
+{
+
+    <div class="alert alert-danger">@Model.LoginMessage</div>
+}
+
 <div class="page-content-area">
     <div class="container">
         <div class="row">
@@ -30,10 +38,8 @@
                     <div class="page-content-wrapper">
                         <div class="row">
                             <div class="col-sm-12 col-md-12 col-xs-12 col-lg-6">
-                                @if (Model.Message!=null)
-                                {
-                                    <div class="alert alert-danger">@Model.Message</div>
-                                }
+                                
+  
                                 <form method="post" asp-page-handler="Login">
                                     <div class="login-form">
                                         <h4 class="login-title">ورود</h4>
@@ -48,10 +54,10 @@
                                             </div>
                                             @*    <div class="col-sm-6">
 
-                                                <div class="check-box d-inline-block ml-0 ml-md-2">
-                                                    <input type="checkbox" id="remember_me">
-                                                    <label for="remember_me">Remember me</label>
-                                                </div>
+                                            <div class="check-box d-inline-block ml-0 ml-md-2">
+                                            <input type="checkbox" id="remember_me">
+                                            <label for="remember_me">Remember me</label>
+                                            </div>
 
                                             </div> *@
 
@@ -69,7 +75,12 @@
                                 </form>
                             </div>
                             <div class="col-sm-12 col-md-12 col-lg-6 col-xs-12">
-                                <form action="#">
+                                @* @if (Model.RegisterMessage!=null) *@
+                                @if (!string.IsNullOrWhiteSpace(Model.RegisterMessage))
+                                {
+                                    <div class="alert alert-danger">@Model.RegisterMessage</div>
+                                }
+                                <form method="post" asp-page-handler="Register">
 
                                     <div class="login-form">
                                         <h4 class="login-title">ثبت نام</h4>
