--- a/ServiceHost/Pages/Account.cshtml
+++ b/ServiceHost/Pages/Account.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
+
 @model ServiceHost.Pages.AccountModel
+
 @{
     ViewData["Title"] = "ورود و ثبت نام ";
 }
@@ -21,15 +23,17 @@
         </div>
     </div>
 </div>
-
+<div> dummy .. is=  @Model.dummy</div>
 
 @* @if (!string.IsNullOrWhiteSpace(Model.LoginMessage)) *@
+
+@*
 @if (Model.LoginMessage != null)
 {
 
     <div class="alert alert-danger">@Model.LoginMessage</div>
 }
-
+*@
 <div class="page-content-area">
     <div class="container">
         <div class="row">
@@ -38,8 +42,9 @@
                     <div class="page-content-wrapper">
                         <div class="row">
                             <div class="col-sm-12 col-md-12 col-xs-12 col-lg-6">
-                                
-  
+
+                                <div class="">@Model.LoginMessage</div>
+
                                 <form method="post" asp-page-handler="Login">
                                     <div class="login-form">
                                         <h4 class="login-title">ورود</h4>
