some changes on Account page

--- a/ServiceHost/Pages/Account.cshtml
+++ b/ServiceHost/Pages/Account.cshtml
@@ -24,11 +24,11 @@
 
 
 @* @if (!string.IsNullOrWhiteSpace(Model.LoginMessage)) *@
-@if (Model.LoginMessage != null)
-{
+@* @if (Model.LoginMessage != null)
+{ *@
 
-    <div class="alert alert-danger">@Model.LoginMessage</div>
-}
+<div class="alert alert-danger">@Model.LoginMessage</div>
+@* } *@
 
 <div class="page-content-area">
     <div class="container">
