--- a/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
+++ b/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
@@ -10,7 +10,7 @@
                 <div class="header-wrapper d-none d-lg-flex">
                     <!-- logo -->
                     <div class="logo">
-                        <a href="index.html">
+                        <a asp-page="/Index">
                             <img src="~/Theme/assets/img/logo.png" class="img-fluid" alt="">
                         </a>
                     </div>
@@ -23,12 +23,12 @@
                                 </li>
 
                                 <li class="menu-item-has-children">
-                                    <a href="blog-left-sidebar.html">محصولات</a>
+                                    <a>محصولات</a>
                                     <ul class="sub-menu">
-                                        @foreach (var item in Model.ProductCategories)
+                                        @foreach (var category in Model.ProductCategories)
                                         {
                                             <li>
-                                                <a asp-page="/ProductCategory" asp-route-id="@item.Slug">@item.Name</a>
+                                                <a asp-page="./ProductCategory" asp-route-id="@category.Slug">@category.Name</a>
                                             </li>
                                         }
 
@@ -36,12 +36,12 @@
                                 </li>
 
                                 <li class="menu-item-has-children">
-                                    <a href="blog-left-sidebar.html"> مقالات</a>
+                                    <a> مقالات</a>
                                     <ul class="sub-menu">
-                                        @foreach (var item in Model.ArticleCategories)
+                                        @foreach (var category in Model.ArticleCategories)
                                         {
                                             <li>
-                                                <a asp-page="/ArticleCategory" asp-route-id="@item.Slug">@item.Name</a>
+                                                <a asp-page="/ArticleCategory" asp-route-id="@category.Slug">@category.Name</a>
                                             </li>
                                         }
                                     </ul>
@@ -50,7 +50,7 @@
                                 <li>
                                     <a href="contact.html">تماس با ما</a>
                                 </li>
-                                
+
                                 @if (AuthHelper.IsAuthenticated())
                                 {
                                     <li>
@@ -63,7 +63,7 @@
                                         <a asp-page="/Account">ثبت نام/ ورود</a>
                                     </li>
                                 }
-                              
+
 
                             </ul>
                         </nav>
@@ -80,11 +80,11 @@
                                 <div class="header-cart-icon">
                                     <a href="#" id="minicart-trigger">
                                         <i class="ion-bag"></i>
-                                        <span class="counter">3</span>
+                                        <span class="counter" id="cart_items_count">0</span>
                                     </a>
                                     <!-- mini cart  -->
                                     <div class="mini-cart" id="mini-cart">
-                                        <div class="cart-items-wrapper ps-scroll">
+                                        <div class="cart-items-wrapper ps-scroll" id="cart_items_wrapper">
                                             <div class="single-cart-item">
                                                 <a href="javascript:void(0)" class="remove-icon">
                                                     <i class="ion-android-close"></i>
@@ -160,8 +160,7 @@
                                             </table>
                                         </div>
                                         <div class="cart-buttons">
-                                            <a href="cart.html">VIEW CART</a>
-                                            <a href="checkout.html">CHECKOUT</a>
+                                            <a asp-page="/Cart">مشاهده سبد خرید</a>
                                         </div>
                                     </div>
                                 </div>
@@ -183,10 +182,10 @@
                                             <h4 class="title">پروفایل من </h4>
                                             <ul>
                                                 <li>
-                                                    <a href="login-register.html">ثبت نام</a>
+                                                    <a asp-page="/Account">ثبت نام</a>
                                                 </li>
                                                 <li>
-                                                    <a href="login-register.html">ورود</a>
+                                                    <a asp-page="/Account">ورود</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -233,149 +232,152 @@
                         </div>
                     </div>
                 </div>
-
-                <!--=======  End of mobile navigation area  =======-->
-
-                <div class="offcanvas-mobile-menu" id="offcanvas-mobile-menu">
-                    <a href="javascript:void(0)" class="offcanvas-menu-close" id="offcanvas-menu-close-trigger">
-                        <i class="ion-android-close"></i>
-                    </a>
-
-                    <div class="offcanvas-wrapper">
-
-                        <div class="offcanvas-inner-content">
-                            <div class="offcanvas-mobile-search-area">
-                                <form action="#">
-                                    <input type="search" placeholder="جستجو ...">
-                                    <button type="submit">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </form>
-                            </div>
-                            <nav class="offcanvas-navigation">
-                                <ul>
-                                    <li class="">
-                                        <a asp-page="/Index">صفحه اصلی</a>
-                                    </li>
-
-                                    <li class="menu-item-has-children">
-                                        <a href="#">محصولات</a>
-                                        <ul class="sub-menu">
-                                            <li>
-                                                <a href="blog-left-sidebar.html">دکوری</a>
-                                            </li>
-                                            <li>
-                                                <a href="blog-right-sidebar.html">نگهدارنده</a>
-                                            </li>
-
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">مقالات</a>
-                                        <ul class="sub-menu">
-                                            <li>
-                                                <a href="blog-left-sidebar.html">گروه مقاله 1</a>
-                                            </li>
-                                            <li>
-                                                <a href="blog-right-sidebar.html">گروه مقاله 2</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="">
-                                        <a asp-page="/Contact">تماس با ما </a>
-                                    </li>
-
-                                </ul>
-                            </nav>
-
-                            <div class="offcanvas-settings">
-                                <nav class="offcanvas-navigation">
-                                    <ul>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">پروفایل من </a>
-                                            <ul class="sub-menu">
-                                                <li>
-                                                    <a href="login-register.html">ثبت نام</a>
-                                                </li>
-                                                <li>
-                                                    <a href="login-register.html">ورود</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        @*                         <li class="menu-item-has-children">
-                                        <a href="#">CURRENCY: USD </a>
-                                        <ul class="sub-menu">
-                                        <li>
-                                        <a href="javascript:void(0)">€ Euro</a>
-                                        </li>
-                                        <li>
-                                        <a href="javascript:void(0)">$ US Dollar</a>
-                                        </li>
-                                        </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                        <a href="#">LANGUAGE: EN-GB </a>
-                                        <ul class="sub-menu">
-                                        <li>
-                                        <a href="javascript:void(0)">
-                                        <img src="~/Theme/assets/img/icons/en-gb.png" alt="">
-                                        English
-                                        </a>
-                                        </li>
-                                        <li>
-                                        <a href="javascript:void(0)">
-                                        <img src="~/Theme/assets/img/icons/de-de.png" alt="">
-                                        Germany
-                                        </a>
-                                        </li>
-                                        </ul>
-                                        </li> *@
-                                    </ul>
-                                </nav>
-                            </div>
-
-                            <div class="offcanvas-widget-area">
-                                <div class="off-canvas-contact-widget">
-                                    <div class="header-contact-info">
-                                        <ul class="header-contact-info__list">
-                                            <li>
-                                                <i class="ion-android-phone-portrait"></i> <a href="tel://12452456012">
-                                                    (1245) 2456
-                                                    012
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <i class="ion-android-mail"></i> <a href="matt.Liaarson@yahoo.com">google.com</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <!--Off Canvas Widget Social Start-->
-                                <div class="off-canvas-widget-social">
-                                    <a href="#" title="Facebook">
-                                        <i class="fa fa-facebook"></i>
-                                    </a>
-                                    <a href="#" title="Twitter">
-                                        <i class="fa fa-twitter"></i>
-                                    </a>
-                                    <a href="#" title="LinkedIn">
-                                        <i class="fa fa-linkedin"></i>
-                                    </a>
-                                    <a href="#" title="Youtube">
-                                        <i class="fa fa-youtube-play"></i>
-                                    </a>
-                                    <a href="#" title="Vimeo">
-                                        <i class="fa fa-vimeo-square"></i>
-                                    </a>
-                                </div>
-                                <!--Off Canvas Widget Social End-->
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
             </div>
         </div>
     </div>
+</div>
+
+
+
+
+<!--=======  End of mobile navigation area  =======-->
+
+<div class="offcanvas-mobile-menu" id="offcanvas-mobile-menu">
+    <a href="javascript:void(0)" class="offcanvas-menu-close" id="offcanvas-menu-close-trigger">
+        <i class="ion-android-close"></i>
+    </a>
+
+    <div class="offcanvas-wrapper">
+
+        <div class="offcanvas-inner-content">
+            <div class="offcanvas-mobile-search-area">
+                <form action="#">
+                    <input type="search" placeholder="جستجو ...">
+                    <button type="submit">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </form>
+            </div>
+            <nav class="offcanvas-navigation">
+                <ul>
+                    <li class="">
+                        <a asp-page="/Index">صفحه اصلی</a>
+                    </li>
+
+                    <li class="menu-item-has-children">
+                        <a href="#">محصولات</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="blog-left-sidebar.html">دکوری</a>
+                            </li>
+                            <li>
+                                <a href="blog-right-sidebar.html">نگهدارنده</a>
+                            </li>
+
+                        </ul>
+                    </li>
+                    <li class="menu-item-has-children">
+                        <a href="#">مقالات</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="blog-left-sidebar.html">گروه مقاله 1</a>
+                            </li>
+                            <li>
+                                <a href="blog-right-sidebar.html">گروه مقاله 2</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="">
+                        <a asp-page="/Contact">تماس با ما </a>
+                    </li>
+
+                </ul>
+            </nav>
+
+            <div class="offcanvas-settings">
+                <nav class="offcanvas-navigation">
+                    <ul>
+                        <li class="menu-item-has-children">
+                            <a href="#">پروفایل من </a>
+                            <ul class="sub-menu">
+                                <li>
+                                    <a href="login-register.html">ثبت نام</a>
+                                </li>
+                                <li>
+                                    <a href="login-register.html">ورود</a>
+                                </li>
+                            </ul>
+                        </li>
+                        @*                         <li class="menu-item-has-children">
+                        <a href="#">CURRENCY: USD </a>
+                        <ul class="sub-menu">
+                        <li>
+                        <a href="javascript:void(0)">€ Euro</a>
+                        </li>
+                        <li>
+                        <a href="javascript:void(0)">$ US Dollar</a>
+                        </li>
+                        </ul>
+                        </li>
+                        <li class="menu-item-has-children">
+                        <a href="#">LANGUAGE: EN-GB </a>
+                        <ul class="sub-menu">
+                        <li>
+                        <a href="javascript:void(0)">
+                        <img src="~/Theme/assets/img/icons/en-gb.png" alt="">
+                        English
+                        </a>
+                        </li>
+                        <li>
+                        <a href="javascript:void(0)">
+                        <img src="~/Theme/assets/img/icons/de-de.png" alt="">
+                        Germany
+                        </a>
+                        </li>
+                        </ul>
+                        </li> *@
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="offcanvas-widget-area">
+                <div class="off-canvas-contact-widget">
+                    <div class="header-contact-info">
+                        <ul class="header-contact-info__list">
+                            <li>
+                                <i class="ion-android-phone-portrait"></i> <a href="tel://12452456012">
+                                    (1245) 2456
+                                    012
+                                </a>
+                            </li>
+                            <li>
+                                <i class="ion-android-mail"></i> <a href="matt.Liaarson@yahoo.com">google.com</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!--Off Canvas Widget Social Start-->
+                <div class="off-canvas-widget-social">
+                    <a href="#" title="Facebook">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href="#" title="Twitter">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href="#" title="LinkedIn">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                    <a href="#" title="Youtube">
+                        <i class="fa fa-youtube-play"></i>
+                    </a>
+                    <a href="#" title="Vimeo">
+                        <i class="fa fa-vimeo-square"></i>
+                    </a>
+                </div>
+                <!--Off Canvas Widget Social End-->
+            </div>
+        </div>
+    </div>
+
 </div>
 
