Permission-based added.

--- a/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -33,6 +33,9 @@
 
     <!-- Custom Files -->
     <link href="~/AdminTheme/assets/css/persian-datepicker.min_2.css" rel="stylesheet" type="text/css" />
+    
+    @RenderSection("Css",false)
+
     <link href="~/AdminTheme/assets/css/helper.css" rel="stylesheet" type="text/css" />
     <link href="~/AdminTheme/assets/css/style.css" rel="stylesheet" type="text/css" />
 
